--- a/package.json
+++ b/package.json
@@ -5,17 +5,12 @@
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
     "@aws-amplify/ui-react": "^1.2.5",
-    "@testing-library/jest-dom": "^5.16.1",
-    "@testing-library/react": "^12.1.2",
-    "@testing-library/user-event": "^13.5.0",
     "aws-amplify": "^4.3.14",
     "axios": "^0.25.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
-    "sass": "^1.49.7",
-    "web-vitals": "^2.1.4"
+    "sass": "^1.49.7"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -55,14 +50,6 @@
   },
   "devDependencies": {
     "@aws-amplify/cli": "^7.6.19",
-    "@storybook/addon-actions": "^6.4.16",
-    "@storybook/addon-essentials": "^6.4.16",
-    "@storybook/addon-links": "^6.4.16",
-    "@storybook/builder-webpack5": "^6.4.16",
-    "@storybook/manager-webpack5": "^6.4.16",
-    "@storybook/node-logger": "^6.4.16",
-    "@storybook/preset-create-react-app": "^4.0.0",
-    "@storybook/react": "^6.4.16",
     "webpack": "^5.67.0"
   }
 }
